--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -1,8 +1,17 @@
-/*!
- * Start Bootstrap - Scrolling Nav (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
+/*====================================*/
+
+/*        -EMIRATES GRAPHIC-          */
+
+/*        emiratesgraphic.com         */
+
+/*====================================*/
+
+
+/*
+///////////////////////////////////////////////////
+My Edition
+///////////////////////////////////////////////////
+*/
 
 body {
     width: 100%;
@@ -14,6 +23,8 @@ html {
     height: 100%;
 }
 
+}
+
 @media(min-width:767px) {
     .navbar {
         padding: 20px 0;
@@ -21,16 +32,106 @@ html {
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
+    .navbar-fixed-top {
+        background-color: transparent;
+        border: none;
+        padding-top: 35px;
+      }
+}
 
-    .top-nav-collapse {
-        padding: 0;
+/*Collapsed*/
+
+.top-nav-collapse {
+  background-color: rgba(47, 56, 119, 0.58) !important;
+  padding-top: 10px !important;
+  transition: ease-in-out all 0.3s;
+}
+
+.top-nav-collapse img {
+  width: 150px !important;
+  transition: ease-in-out all 0.3s;
+  padding-top: 10px;
+}
+
+
+
+.navbar img {
+    width: 200px;
+  transition: ease-in-out all 0.3s;
+}
+
+.navbar-fixed-top {
+  background-color: transparent;
+  border: none;
+  padding-top: 35px;
+  transition: ease-in-out all 0.3s;
+}
+
+/*Ngjyra e linkave ne navigationbar*/
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  font-family: 'Montserrat-Bold';
+  padding-top: 20px;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  color: #81C241;
+  font-family: 'Montserrat-Bold';
+}
+
+/*
+///////////////////////////////////////////////////
+Responsive Part 
+///////////////////////////////////////////////////
+*/
+
+@media only screen and (min-width: 844px) {
+    .desktop-d-n {
+        display: none;
     }
 }
 
+/*Mobile Version*/
 
-.intro-section {
-    height: 100%;
-    padding-top: 150px;
-    text-align: center;
-    background: pink;
-}
+@media only screen and (max-width: 844px) {
+    .mobile-d-n {
+        display: none;
+    }
+    .navbar-header img {
+      float: right;
+      width: 100px;
+      margin-right: 35px;
+    }
+    .navbar-fixed-top {
+      background-color: rgba(47, 56, 119, 0.78) !important; 
+      text-align: center;
+    }
+    .navbar-toggle {
+      float: left;
+      margin-left: 35px;
+      margin-top: 0px;
+      border: none;
+      background-color: transparent !important;
+    }
+    .navbar-toggle {
+      background-color: transparent !important;
+      padding-top: 5px;
+      padding-bottom: 20px;
+    }
+    .navbar-default .navbar-toggle .icon-bar {
+      background-color: #f7941d;
+      width: 25px;
+    }
+    .top-nav-collapse .navbar-toggle {
+      padding-top: 25px;
+      padding-bottom: 20px;
+    }
+    .top-nav-collapse .navbar-header img {
+      width: 80px !important ;
+      transition: ease-in-out all 0.3s;
+      padding-top: 20px;
+    }
+    .navbar-default .navbar-nav > li > a {
+      font-size: 15px !important;
+    }
+  }
