--- a/css/inputs_style_material.css
+++ b/css/inputs_style_material.css
@@ -1,4 +1,12 @@
 
+.contact_forms_section h2 {
+  color: white;
+  font-family: 'Montserrat-Light';
+  font-size: 35px;
+}
+.contact_forms_section p {
+  color: white;
+}
 .group_inputs {
   color: white;
 }
@@ -8,7 +16,7 @@
 .input_size_textarea {
   margin-top: 50px;
 }
-.input_style         {
+.input_style {
   font-size:18px;
   padding:10px 10px 10px 5px;
   display:block;
@@ -37,7 +45,7 @@
 .input_style:focus ~ .label_string, .input_style:valid ~ .label_string    {
   top:-10px;
   font-size:12px;
-  color:white;
+  color:#81C241;
   transition:0.2s ease all; 
   -moz-transition:0.2s ease all; 
   -webkit-transition:0.2s ease all;
@@ -97,11 +105,10 @@
 .textarea .input_style:focus ~ .label_string, .textarea .input_style:valid ~ .label_string    {
   top:-50px;
   font-size:12px;
-  color:red;
+  color:#81C241;
   transition:0.2s ease all; 
   -moz-transition:0.2s ease all; 
   -webkit-transition:0.2s ease all;
-  color: white;
 }
 
 /* ANIMATIONS ================ */
