--- a/css/home.css
+++ b/css/home.css
@@ -26,16 +26,6 @@
 	color: #81C241;
 }
 
-.button_style_c {
-	background-color: #81C241;
-	height: 40px;
-	width: 150px;
-	border: none;
-	border-radius: 30px;
-	color: white;
-	font-family: 'Montserrat-Bold';
-	margin-top: 2%;
-}
 
 /*Homepage First Section img and text*/
 
@@ -118,4 +108,19 @@
 .services_panel_sm h4 {
 	font-size: 13px;
 	color: #81C241;
+}
+.services_panel_sm a {
+	text-decoration: none !important;
+}
+.read_more_ins img {
+	height: 12px;
+	width: 50px !important;
+	transition: ease-in-out all 0.3s;
+}
+
+.read_more_ins:hover img {
+	height: 12px;
+	transform: scale(1.4, 0.9);
+  	transform-origin: left;
+	transition: ease-in-out all 0.3s;
 }
