--- a/css/news_section.css
+++ b/css/news_section.css
@@ -2,9 +2,9 @@
 
 .lastest_news_section {
 	padding: 60px 10px;
-	background-color: #F1F2F2;
+	background-color: #F1F2F2;	
 }
-
+ 
 
 .lastest_news_section h1 {
 	color: #5D6A84;
@@ -30,6 +30,7 @@
 .news_panel_section {
 	background-color: white;
 	margin-bottom: 2%;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .news_panel_section img {
 	width: 100%;
