--- a/css/upcoming_conferences.css
+++ b/css/upcoming_conferences.css
@@ -23,8 +23,13 @@
 }
 
 .conferences_panel {
-	border: solid 1px #5D6A84;
 	margin-bottom: 30px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.14), 0 6px 6px rgba(0,0,0,0.23);
+    transition: all 0.3s;
+}
+.conferences_panel:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transition: all 0.3s;
 }
 .conferences_panel img {
 	width: 100%;
